# SandPaper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  exporter.py  extractor.py  menu.py  pyproject.toml  sandpaper.py  scraper.py
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  user-guide.md
src/sandpaper-py/: exporter.py  sandpaper.py  scraper.py
src/sandpaper_py/: __init__.py  api.py  cli.py  config.py  core.py  exceptions.py  extractor.py  menu.py  pagination.py  plugins.py  presets.py  provenance.py  recipe_runner.py  recipes.py  robots.py  schema.py  throttle.py  types.py  utils.py  visual.py  watch.py
src/sandpaper_py/exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  json_exporter.py  parquet_exporter.py  sqlite_exporter.py
src/sandpaper_py/extractors/: __init__.py  base.py  heuristic.py  selector.py
src/sandpaper_py/loaders/: __init__.py  async_loader.py  base.py  playwright_loader.py  session.py
src/sandpaper_py/templates/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_exporters.py  test_extractors.py  test_extras.py  test_follow.py  test_pagination.py  test_pattern_picker.py  test_post_processing.py  test_recipes.py  test_record_extraction.py  test_refinements.py  test_schema.py  test_throttle.py  test_utils.py
tests/fixtures/: articles_list.html  cards.html  list.html  no_body.html  table.html
