[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sandpaper-py"
version = "0.7.1"
authors = [
  { name = "Aaryan Dadu", email = "aaryandadu5157@gmail.com" },
]
description = "Scrape web pages with Playwright and export structured data."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
  "playwright>=1.40",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
  "pandas>=1.5",
  "rich>=13.0",
  "questionary>=2.0",
  "click>=8.1",
  "tomli>=2.0; python_version < '3.11'",
  "tomli-w>=1.0",
  "platformdirs>=3.0",
  "httpx>=0.25",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
parquet = ["pyarrow>=14.0"]
api = ["fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1"]
schedule = ["apscheduler>=3.10"]
all = [
  "openpyxl>=3.1",
  "pyarrow>=14.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "apscheduler>=3.10",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.8",
  "pandas-stubs",
  "types-beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/Aaryan-Dadu/SandPaper"
Issues = "https://github.com/Aaryan-Dadu/SandPaper/issues"

[project.scripts]
sandpaper = "sandpaper_py.cli:main"

[project.entry-points."sandpaper.exporters"]
csv = "sandpaper_py.exporters.csv_exporter:CSVExporter"
json = "sandpaper_py.exporters.json_exporter:JSONExporter"
jsonl = "sandpaper_py.exporters.json_exporter:JSONLExporter"
excel = "sandpaper_py.exporters.excel_exporter:ExcelExporter"
parquet = "sandpaper_py.exporters.parquet_exporter:ParquetExporter"
sqlite = "sandpaper_py.exporters.sqlite_exporter:SQLiteExporter"

[project.entry-points."sandpaper.extractors"]
heuristic = "sandpaper_py.extractors.heuristic:HeuristicExtractor"
selector = "sandpaper_py.extractors.selector:SelectorExtractor"

[project.entry-points."sandpaper.loaders"]
playwright = "sandpaper_py.loaders.playwright_loader:PlaywrightLoader"

[tool.hatch.build.targets.wheel]
packages = ["src/sandpaper_py"]

[tool.hatch.build.targets.sdist]
include = ["src/sandpaper_py", "README.md", "LICENSE", "tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "B",
  "UP",
  "SIM",
  "RET",
  "C4",
]
ignore = [
  "E501",
  "UP006",  # Use `dict[...]` over `Dict[...]` (we support py39 typing module)
  "UP007",  # Use `X | Y` (py39 needs Optional/Union from typing)
  "UP035",  # `typing.X` is deprecated -> deprecated only on 3.9+
  "UP045",  # X | None requires py3.10+ runtime; keep Optional[X] for clarity
  "RET504", # tolerate unnecessary cfg-then-return when it aids readability
  "SIM105", # contextlib.suppress style is a wash; explicit try/except is fine
  "SIM108", # ternary is not always clearer
  "SIM117", # combined with statements: not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/sandpaper_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning:pandas.*",
]
markers = [
  "slow: marks tests as slow",
  "browser: tests that need a real browser",
]
